force-app/main/default/objects/BMCServiceDesk__Chatter_Listener__c/BMCServiceDesk__Chatter_Listener__c.object-meta.xml
<CustomObject>
    <description>Configure Chatter listeners to monitor Chatter groups and create incidents from the Chatter posts.</description>
    <label>Chatter Listener</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chatter Listeners</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>