force-app/main/default/objects/BMCServiceDesk__Chatter_Listener__c/fields/BMCServiceDesk__Auto_Reply_to_Chatter__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Auto_Reply_to_Chatter__c</fullName>
    <label>Auto Reply to Chatter Post</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>