force-app/main/default/objects/BMCServiceDesk__Chatter_Listener__c/fields/BMCServiceDesk__Chatter_Group__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Chatter_Group__c</fullName>
    <label>Chatter Group</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>