force-app/main/default/objects/BMCServiceDesk__Chatter_Listener__c/fields/BMCServiceDesk__FKTemplate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BMCServiceDesk__SYSTemplate__c.BMCServiceDesk__templateFor__c</field>
            <operation>equals</operation>
            <value>Incident</value>
        </filterItems>
        <filterItems>
            <field>BMCServiceDesk__SYSTemplate__c.BMCServiceDesk__inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>BMCServiceDesk__SYSTemplate__c</referenceTo>
    <relationshipLabel>Chatter Listeners</relationshipLabel>
    <relationshipName>Chatter_Listeners</relationshipName>
    <type>Lookup</type>
</CustomField>