force-app/main/default/objects/BMCServiceDesk__Chatter_Listener__c/fields/BMCServiceDesk__Keywords__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Keywords__c</fullName>
    <label>Hashtags</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>