force-app/main/default/objects/BMCServiceDesk__Chatter_Listener__c/fields/BMCServiceDesk__Map_Chatter_User_to__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Map_Chatter_User_to__c</fullName>
    <label>Save Chatter Post User as</label>
    <length>255</length>
    <type>Text</type>
</CustomField>