force-app/main/default/objects/BMCServiceDesk__Chatter_Listener__c/fields/BMCServiceDesk__Template__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Template__c</fullName>
    <formula>BMCServiceDesk__FKTemplate__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template~</label>
    <type>Text</type>
</CustomField>