force-app/main/default/objects/BMCServiceDesk__Chatter_Listener__c/fields/BMCServiceDesk__User__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__User__c</fullName>
    <formula>BMCServiceDesk__Auto_Reply_User__r.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User~</label>
    <type>Text</type>
</CustomField>