force-app/main/default/objects/BMCServiceDesk__Chatter_Listener__c/fields/BMCServiceDesk__User_to_Follow_Record__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__User_to_Follow_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable User to Auto Follow Record</label>
    <type>Checkbox</type>
</CustomField>